{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 91,
  "lineage": "6da3533d-ca70-e0c8-ffa1-efeeb6dc1204",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:internet-gateway/igw-049a02add513af0fc",
            "id": "igw-049a02add513af0fc",
            "owner_id": "536638177339",
            "tags": {
              "Name": "IGW-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "IGW-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:route-table/rtb-07e162591de9d7210",
            "id": "rtb-07e162591de9d7210",
            "owner_id": "536638177339",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-RT-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "private-RT-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:route-table/rtb-0285633328fb190f4",
            "id": "rtb-0285633328fb190f4",
            "owner_id": "536638177339",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049a02add513af0fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "Public-RT-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b215dc1eee93db83",
            "route_table_id": "rtb-07e162591de9d7210",
            "subnet_id": "subnet-046efb5608f3436db"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf9d1e706f2e5d9d",
            "route_table_id": "rtb-07e162591de9d7210",
            "subnet_id": "subnet-0a0df9b792c1bb804"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6c7db253ccdd81c",
            "route_table_id": "rtb-07e162591de9d7210",
            "subnet_id": "subnet-04dc0d8cd89d9a342"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03401ce354201399e",
            "route_table_id": "rtb-07e162591de9d7210",
            "subnet_id": "subnet-05605225cb6d85afb"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0756c138d567e326a",
            "route_table_id": "rtb-07e162591de9d7210",
            "subnet_id": "subnet-0175ceba4705cb0a7"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00585b25ad5548e96",
            "route_table_id": "rtb-07e162591de9d7210",
            "subnet_id": "subnet-0f859f4ffc50d6adb"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0741697ad65585ffb",
            "route_table_id": "rtb-0285633328fb190f4",
            "subnet_id": "subnet-0f50f98c98d1b9652"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8c364da101f9eed",
            "route_table_id": "rtb-0285633328fb190f4",
            "subnet_id": "subnet-09d18cb652c9f23af"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9eb63f368b48c78",
            "route_table_id": "rtb-0285633328fb190f4",
            "subnet_id": "subnet-0cc8c3ce778c1c7ef"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4778e0ed292dfeb",
            "route_table_id": "rtb-0285633328fb190f4",
            "subnet_id": "subnet-0ad44fc608c7e749d"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b91f1450b50dc1d4",
            "route_table_id": "rtb-0285633328fb190f4",
            "subnet_id": "subnet-05bc7c5cbe8a4a206"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065fc35e1b48a9d49",
            "route_table_id": "rtb-0285633328fb190f4",
            "subnet_id": "subnet-0084be83b835666bb"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnet",
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:security-group/sg-07ff214bae0f914e2",
            "description": "Allow_All",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ff214bae0f914e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG-AA-2021-07-21T16:35:04Z",
            "name_prefix": "",
            "owner_id": "536638177339",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-046efb5608f3436db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.12.0/23",
            "id": "subnet-046efb5608f3436db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PRI-SN-1-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PRI-SN-1-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-0a0df9b792c1bb804",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.14.0/23",
            "id": "subnet-0a0df9b792c1bb804",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PRI-SN-2-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PRI-SN-2-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-04dc0d8cd89d9a342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.16.0/23",
            "id": "subnet-04dc0d8cd89d9a342",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PRI-SN-3-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PRI-SN-3-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-05605225cb6d85afb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.18.0/23",
            "id": "subnet-05605225cb6d85afb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PRI-SN-4-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PRI-SN-4-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-0175ceba4705cb0a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.20.0/23",
            "id": "subnet-0175ceba4705cb0a7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PRI-SN-5-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PRI-SN-5-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-0f859f4ffc50d6adb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.22.0/23",
            "id": "subnet-0f859f4ffc50d6adb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PRI-SN-6-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PRI-SN-6-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-0f50f98c98d1b9652",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0f50f98c98d1b9652",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PUB-SN-1-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PUB-SN-1-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-09d18cb652c9f23af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-09d18cb652c9f23af",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PUB-SN-2-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PUB-SN-2-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-0cc8c3ce778c1c7ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0cc8c3ce778c1c7ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PUB-SN-3-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PUB-SN-3-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-0ad44fc608c7e749d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0ad44fc608c7e749d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PUB-SN-4-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PUB-SN-4-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-05bc7c5cbe8a4a206",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-05bc7c5cbe8a4a206",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PUB-SN-5-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PUB-SN-5-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:subnet/subnet-0084be83b835666bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0084be83b835666bb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536638177339",
            "tags": {
              "Name": "PUB-SN-6-2021-07-21T16:35:04Z"
            },
            "tags_all": {
              "Name": "PUB-SN-6-2021-07-21T16:35:04Z"
            },
            "vpc_id": "vpc-07a578f2adbd39cb9"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536638177339:vpc/vpc-07a578f2adbd39cb9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-052120e259173bafd",
            "default_route_table_id": "rtb-06bd13cadf9c23ee7",
            "default_security_group_id": "sg-0098898daad124b0f",
            "dhcp_options_id": "dopt-059ef08968c6ba16d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07a578f2adbd39cb9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06bd13cadf9c23ee7",
            "owner_id": "536638177339",
            "tags": {
              "Name": "2021-07-21T16:35:04Z",
              "Owner": "HSK"
            },
            "tags_all": {
              "Name": "2021-07-21T16:35:04Z",
              "Owner": "HSK"
            }
          }
        }
      ]
    }
  ]
}